baml_language/crates/baml_tests/snapshots/diagnostic_errors/llm_reserved_params/baml_tests__diagnostic_errors__llm_reserved_params__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ===
function user.ReservedPromptContext(input: string, client: ai.Client? = null, on_event: (ai.events.Event) -> null? = null) -> string  [llm] {
  ai.Agent.new(client = client, on_event = on_event).run(ReservedPromptContext@spec(input)).value
}
function user.ReservedPromptContext@build_request(input: string, client: ai.Client? = null) -> baml.http.Request  [expr] {
  ReservedPromptContext@spec(input).build_request(client = client)
}
function user.ReservedPromptContext@parse(json: string) -> string  [expr] {
  baml.sap.parse(json)
}
function user.ReservedPromptContext@render_prompt(input: string) -> ai.Prompt  [expr] {
  ReservedPromptContext@spec(input).prompt()
}
function user.ReservedPromptContext@spec(input: string) -> ai.FunctionSpec<string>  [expr] {
  ai.FunctionSpec { spec_name: "ReservedPromptCon...", args: map { "input": input }, prompt_template: ( __spec_output_format: ai.OutputFormat) -> { { let ctx = ai.internal.SpecCtx { _output_format:  __spec_output_format }; let  __spec_tagged_prompt = { let  __tt_parts: string[] = []; let  __tt_values: unknown[] = []; let  __tt_cur = "";  __tt_parts.push( __tt_cur);  __tt_cur = "";  __tt_values.push({  } input);  __tt_cur =  __tt_cur Add " ";  __tt_parts.push( __tt_cur);  __tt_cur = "";  __tt_values.push({  } ctx.output_format());  __tt_parts.push( __tt_cur) } baml.TaggedString { parts:  __tt_parts, values:  __tt_values } } ai.internal.assemble_llm_prompt( __spec_tagged_prompt.parts,  __spec_tagged_prompt.values) catch_all ( __prompt_render_err) { _ => throw ai.errors.PromptRenderError { message: "prompt template r...", cause:  __prompt_render_err } } }, toolbox: ai.tools.Toolbox.new([]), default_client: openai.ResponsesClient.new(model = "gpt-4o") }
}
function user.ReservedPromptContext@stream(input: string, client: ai.stream.StreamingClient? = null, on_event: (ai.events.Event) -> null? = null) -> ai.stream.Stream<string>  [expr] {
  ai.stream.from_spec(ReservedPromptContext@spec(input), client = client, on_event = on_event)
}

--- captures ---
lambda ( __spec_output_format) in ReservedPromptContext@spec: captures [input]
