baml_language/crates/baml_tests/snapshots/diagnostic_errors/llm_reserved_params/baml_tests__diagnostic_errors__llm_reserved_params__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] E0010

  × LLM function `ReservedPromptContext` cannot declare a parameter named `ctx`; `ctx` is reserved for the compiler-provided prompt context
   ╭─[main.baml:1:32]
 1 │ function ReservedPromptContext(ctx: string, input: string) -> string {
   ·                                ─┬─
   ·                                 ╰── reserved LLM parameter name
   ╰────
